--- a/API_Locacao/API_Locacao/Views/Home/Index.cshtml
+++ b/API_Locacao/API_Locacao/Views/Home/Index.cshtml
@@ -2,7 +2,50 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 py-5 text-center " style="cursor:pointer; text-decoration:none;">
+                <div class="" style="border:5px solid #131313; background:white ">
+                    <a asp-controller="Cliente" asp-action="Index" style="        text-decoration: none;">
+
+                        <h1 class="py-4" style="color:black">Cliente</h1>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 py-5 text-center " style="cursor:pointer; text-decoration:none;">
+                <div class="" style="border:5px solid #131313; background:white ">
+                    
+                    <a asp-controller="Produto" asp-action="Index" style="        text-decoration: none;">
+
+                        <h1 style="color:black">Catálogo de Produtos</h1>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 py-5 text-center " style="cursor:pointer; text-decoration:none;">
+                <div class="" style="border:5px solid #131313; background:white ">
+                    <a asp-controller="Cotacao" asp-action="Index" style="        text-decoration: none;">
+
+                        <h1 class="py-4" style="color:black">Cotação</h1>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-6 py-5 text-center " style="cursor:pointer; text-decoration:none;">
+                <div class="" style="border:5px solid #131313; background:white ">
+                    <a asp-controller="Locacao" asp-action="Index" style="        text-decoration: none;">
+
+                        <h1 class="py-3" style="color:black">Locação</h1>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-6  py-5 text-center " style="cursor:pointer; text-decoration:none;">
+                <div class="" style="border:5px solid #131313; background:white ">
+                   
+                    <a asp-controller="Devolucao" asp-action="Index" style="        text-decoration: none;">
+
+                        <h1 class="py-3" style="color:black">Devolução</h1>
+                    </a>
+                </div>
+            </div>
+
+        </div>
+    </div>
