--- a/API_Locacao/API_Locacao/Views/Produto/Index.cshtml
+++ b/API_Locacao/API_Locacao/Views/Produto/Index.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1 class="text-center">CATÁLOGO DE PRODUTOS</h1>
 
-<p>
+@*<p>
     <a asp-action="Create">Create New</a>
-</p>
+</p>*@
 <table class="table">
     <thead>
         <tr>
