--- a/API_Locacao/API_Locacao/Views/Locacao/Create.cshtml
+++ b/API_Locacao/API_Locacao/Views/Locacao/Create.cshtml
@@ -14,17 +14,17 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="DataInicio" class="control-label"></label>
-                <input asp-for="DataInicio" class="form-control" />
+                <input asp-for="DataInicio" class="form-control" onblur="MudaData()"/>
                 <span asp-validation-for="DataInicio" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DataFinal" class="control-label"></label>
-                <input asp-for="DataFinal" class="form-control" />
+                <input asp-for="DataFinal" class="form-control"onblur="MudaData()" />
                 <span asp-validation-for="DataFinal" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Dias" class="control-label"></label>
-                <input asp-for="Dias" class="form-control" />
+                <input asp-for="Dias" class="form-control" readonly/>
                 <span asp-validation-for="Dias" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -49,6 +49,23 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+<script>
+   
+    function MudaData() {
+
+        var data1 = new Date(document.getElementById("DataInicio").value)
+        inicio = data1.getDate()
+        var data2 = new Date(document.getElementById("DataFinal").value)
+        fim = data2.getDate()
+        var diferenca = (fim - inicio)       
+
+        document.getElementById("Dias").value = diferenca
+            
+        
+    }
+        
+</script>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
