ajustes front-end

--- a/API_Locacao/API_Locacao/Views/Devolucao/Index.cshtml
+++ b/API_Locacao/API_Locacao/Views/Devolucao/Index.cshtml
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Locacao.LocacaoId)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.DevolucaoId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.DevolucaoId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.DevolucaoId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.DevolucaoId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.DevolucaoId">Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.DevolucaoId">Deletar</a>
             </td>
         </tr>
 }
