--- a/API_Locacao/API_Locacao/Views/Devolucao/Details.cshtml
+++ b/API_Locacao/API_Locacao/Views/Devolucao/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalhes</h1>
 
 <div>
     <h4>Devolucao</h4>
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.DevolucaoId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.DevolucaoId">Editar</a> |
+    <a asp-action="Index">Voltar</a>
 </div>
