--- a/API_Locacao/API_Locacao/Views/Devolucao/Create.cshtml
+++ b/API_Locacao/API_Locacao/Views/Devolucao/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Criar</h1>
+<h1>Create</h1>
 
 <h4>Devolucao</h4>
 <hr />
@@ -18,23 +18,22 @@
                 <span asp-validation-for="Data" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Multa" class="control-label"></label>
-                <input asp-for="Multa" class="form-control" />
-                <span asp-validation-for="Multa" class="text-danger"></span>
+                <label asp-for="ProdutoId" class="control-label"></label>
+                <select asp-for="ProdutoId" class ="form-control" asp-items="ViewBag.ProdutoId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="LocacaoId" class="control-label"></label>
                 <select asp-for="LocacaoId" class ="form-control" asp-items="ViewBag.LocacaoId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Criar" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Voltar</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
