--- a/API_Locacao/API_Locacao/Views/Devolucao/Delete.cshtml
+++ b/API_Locacao/API_Locacao/Views/Devolucao/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Deletar</h1>
+<h1>Delete</h1>
 
-<h3>Tem certeza que deseja apagar?</h3>
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Devolucao</h4>
     <hr />
@@ -18,22 +18,22 @@
             @Html.DisplayFor(model => model.Data)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Multa)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Multa)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Locacao)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Locacao.LocacaoId)
         </dd class>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Produto)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Produto.ProdutoId)
+        </dd class>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="DevolucaoId" />
-        <input type="submit" value="Deletar" class="btn btn-danger" /> |
-        <a asp-action="Index">Voltar</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
     </form>
 </div>
