--- a/API_Locacao/API_Locacao/Views/Devolucao/Details.cshtml
+++ b/API_Locacao/API_Locacao/Views/Devolucao/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Detalhes</h1>
+<h1>Details</h1>
 
 <div>
     <h4>Devolucao</h4>
@@ -17,20 +17,20 @@
             @Html.DisplayFor(model => model.Data)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Multa)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Multa)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Locacao)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Locacao.LocacaoId)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Produto)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Produto.ProdutoId)
+        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.DevolucaoId">Editar</a> |
-    <a asp-action="Index">Voltar</a>
+    <a asp-action="Edit" asp-route-id="@Model.DevolucaoId">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
