--- a/API_Locacao/API_Locacao/Views/Devolucao/Edit.cshtml
+++ b/API_Locacao/API_Locacao/Views/Devolucao/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Editar</h1>
+<h1>Edit</h1>
 
 <h4>Devolucao</h4>
 <hr />
@@ -19,9 +19,9 @@
                 <span asp-validation-for="Data" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Multa" class="control-label"></label>
-                <input asp-for="Multa" class="form-control" />
-                <span asp-validation-for="Multa" class="text-danger"></span>
+                <label asp-for="ProdutoId" class="control-label"></label>
+                <select asp-for="ProdutoId" class="form-control" asp-items="ViewBag.ProdutoId"></select>
+                <span asp-validation-for="ProdutoId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="LocacaoId" class="control-label"></label>
@@ -29,14 +29,14 @@
                 <span asp-validation-for="LocacaoId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Voltar</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
