--- a/API_Locacao/API_Locacao/Views/Devolucao/Index.cshtml
+++ b/API_Locacao/API_Locacao/Views/Devolucao/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-    <h1 class="text-center">DEVOLUÇÃO</h1>
+<h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Realizar Devolução</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -16,10 +16,10 @@
                 @Html.DisplayNameFor(model => model.Data)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Multa)
+                @Html.DisplayNameFor(model => model.Locacao)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Locacao)
+                @Html.DisplayNameFor(model => model.Produto)
             </th>
             <th></th>
         </tr>
@@ -31,15 +31,15 @@
                 @Html.DisplayFor(modelItem => item.Data)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Multa)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Locacao.LocacaoId)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.DevolucaoId">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.DevolucaoId">Detalhes</a> |
-                <a asp-action="Delete" asp-route-id="@item.DevolucaoId">Deletar</a>
+                @Html.DisplayFor(modelItem => item.Produto.ProdutoId)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.DevolucaoId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.DevolucaoId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.DevolucaoId">Delete</a>
             </td>
         </tr>
 }
