--- a/API_Locacao/API_Locacao/Views/Shared/_Layout.cshtml
+++ b/API_Locacao/API_Locacao/Views/Shared/_Layout.cshtml
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand col-md-12" asp-area="" style="font-size:30px" asp-controller="Home" asp-action="Index">API LOCAÇÃO NOTEBOOK</a>
+        <nav class=" navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <div class="container bg-dark col-md-12">
+                <a class="navbar-brand col-md-12 text-white" asp-area="" style="font-size:30px" asp-controller="Home" asp-action="Index">API LOCAÇÃO NOTEBOOK</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
