--- a/API_Locacao/API_Locacao/Views/Cliente/Create.cshtml
+++ b/API_Locacao/API_Locacao/Views/Cliente/Create.cshtml
@@ -42,14 +42,14 @@
                 <span asp-validation-for="Estado" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Criar" class="btn btn-primary" />
+                <input type="submit" value="CADASTRAR" class="btn-add w-50 rounded-pill"/>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Voltar</a>
+    <a class="text-info" asp-action="Index">VOLTAR</a>
 </div>
 
 @section Scripts {
