--- a/API_Locacao/API_Locacao/Views/Cliente/Edit.cshtml
+++ b/API_Locacao/API_Locacao/Views/Cliente/Edit.cshtml
@@ -4,7 +4,6 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Editar</h1>
 
 <h4>Cliente</h4>
 <hr />
@@ -14,44 +13,44 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ClienteId" />
             <div class="form-group">
-                <label asp-for="Cpf" class="control-label"></label>
+                <label asp-for="Cpf" class="control-label">CPF:</label>
                 <input asp-for="Cpf" class="form-control" />
                 <span asp-validation-for="Cpf" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
+                <label asp-for="Nome" class="control-label">NOME:</label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Cep" class="control-label"></label>
+                <label asp-for="Cep" class="control-label">CEP:</label>
                 <input asp-for="Cep" class="form-control" />
                 <span asp-validation-for="Cep" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Endereco" class="control-label"></label>
+                <label asp-for="Endereco" class="control-label">ENDEREÇO:</label>
                 <input asp-for="Endereco" class="form-control" />
                 <span asp-validation-for="Endereco" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Cidade" class="control-label"></label>
+                <label asp-for="Cidade" class="control-label">CIDADE:</label>
                 <input asp-for="Cidade" class="form-control" />
                 <span asp-validation-for="Cidade" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Estado" class="control-label"></label>
+                <label asp-for="Estado" class="control-label">ESTADO:</label>
                 <input asp-for="Estado" class="form-control" />
                 <span asp-validation-for="Estado" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
+                <input type="submit" value="SALVAR" class="btn-add w-50 rounded-pill" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Voltar</a>
+    <a asp-action="Index">VOLTAR</a>
 </div>
 
 @section Scripts {
