--- a/API_Locacao/API_Locacao/Views/Devolucao/Create.cshtml
+++ b/API_Locacao/API_Locacao/Views/Devolucao/Create.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Devolucao</h4>
+<h4>Devolução</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,22 +16,22 @@
                 <span asp-validation-for="Data" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProdutoId" class="control-label"></label>
+                <label asp-for="ProdutoId" class="control-label">PRODUTO:</label>
                 <select asp-for="ProdutoId" class ="form-control" asp-items="ViewBag.ProdutoId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="LocacaoId" class="control-label"></label>
+                <label asp-for="LocacaoId" class="control-label">ID CLIENTE:</label>
                 <select asp-for="LocacaoId" class ="form-control" asp-items="ViewBag.LocacaoId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="DEVOLVER" class="btn-add w-50 rounded-pill" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">VOLTAR</a>
 </div>
 
 @section Scripts {
