--- a/API_Locacao/API_Locacao/Views/Devolucao/Details.cshtml
+++ b/API_Locacao/API_Locacao/Views/Devolucao/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+
 
 <div>
-    <h4>Devolucao</h4>
+    <h4>Devolução</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -20,17 +20,17 @@
             @Html.DisplayNameFor(model => model.Locacao)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Locacao.LocacaoId)
+            @Html.DisplayFor(model => model.Locacao.ClienteId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Produto)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Produto.ProdutoId)
+            @Html.DisplayFor(model => model.Produto.Modelo)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.DevolucaoId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+
+    <a asp-action="Index">Voltar</a>
 </div>
