--- a/API_Locacao/API_Locacao/Views/Locacao/Details.cshtml
+++ b/API_Locacao/API_Locacao/Views/Locacao/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Detalhes</h1>
 
 <div>
-    <h4>Locacao</h4>
+    <h4>Locação</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -44,17 +43,17 @@
             @Html.DisplayNameFor(model => model.Cliente)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cliente.ClienteId)
+            @Html.DisplayFor(model => model.Cliente.Nome)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Produto)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Produto.ProdutoId)
+            @Html.DisplayFor(model => model.Produto.Modelo)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.LocacaoId">Editar</a> |
+   
     <a asp-action="Index">Voltar</a>
 </div>
