--- a/API_Locacao/API_Locacao/Views/Locacao/Index.cshtml
+++ b/API_Locacao/API_Locacao/Views/Locacao/Index.cshtml
@@ -61,9 +61,9 @@
                 @Html.DisplayFor(modelItem => item.Produto.Modelo)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.LocacaoId">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.LocacaoId">Detalhes</a> |
-                <a asp-action="Delete" asp-route-id="@item.LocacaoId">Deletar</a>
+            
+                <a asp-action="Details" asp-route-id="@item.LocacaoId">Detalhes</a> 
+                
             </td>
         </tr>
 }
